<resources>
    <string name="app_name">BookInventory</string>
    <string name="the_inventory_is_empty">inventory is empty</string>
    <string name="start_by_adding_a_book">Start by adding a book</string>
    <string name="insert_dummy_book">insert book</string>
    <string name="delete_all">delete all</string>
    <string name="books_image_or_else_cover">bookbs image</string>
    <string name="book_name">Book Name: </string>
    <string name="book_price">Book Price: </string>
    <string name="enter_book_s_price">Enter book\'s price</string>
    <string name="quantity">Quantity: </string>
    <string name="choose">"Choose a number of books</string>
    <string name="supplier_name">Supplier: </string>
    <string name="supplier_s_phone">Supplier\'s Phone:</string>
    <string name="enter_suppliers_name">Enter supplier\'s name</string>
    <string name="enter_suppliers_phone">Enter suppliers phone</string>
    <string name="enter_books_name">Enter book\'s name</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="decreases_the_quantity">decreases the quantity</string>
    <string name="increasequantity">increases the quantity</string>
    <string name="add_an_image">Add an image</string>
    <string name="cv_image_of_the_book">image book</string>
    <string name="buy">buy</string>
    <string name="money">$</string>
    <string name="delete_book">delete book</string>
    <string name="save_book">save</string>
    <string name="new_book">Add new Book</string>
    <string name="existing_book">Edit book</string>
    <string name="discard_or_edit">Discard your changes and quit editing?</string>
    <string name="keep_edit">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="cannot_negativequant">Can not have negative quantity</string>
    <string name="outofstock">Out of stock</string>
    <string name="book_cover">Book cover</string>
    <string name="call_supplier">call supplier</string>
    <string name="sure_todo">Are you sure you want to delete that entry?</string>
    <string name="error_nedname">book needs a name</string>
    <string name="errsupname">supplier needs a name</string>
    <string name="errsupphone">Phone number is needed</string>
    <string name="invalphone">Invalid phone number</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="text20">20</string>
</resources>
